# OGIS-WorldBowlingScorer

./: CMakeLists.txt  README.md
LibWorldBowlingScorer/: CMakeLists.txt  bowlscorermainwindow.ui
LibWorldBowlingScorer/include/: loop
LibWorldBowlingScorer/include/ogis/: cpploop.hpp
LibWorldBowlingScorer/include/ogis/wbscorer/: bowlframescore.h  bowlplayerscore.h  bowlscorer.h  bowlscorermainwindow.h
LibWorldBowlingScorer/src/: bowlframescore.cpp  bowlplayerscore.cpp  bowlscorer.cpp  bowlscorermainwindow.cpp
UML/: WorldBowlingScore-UML-classView.uxf  WorldBowlingScore-UML-details.uxf
WorldBowlingScorer/: CMakeLists.txt  bowlframescore.cpp  bowlframescore.h  bowlplayerscore.cpp  bowlplayerscore.h  bowlscorer.cpp  bowlscorer.h  bowlscorermainwindow.cpp  bowlscorermainwindow.h  main.cpp
unit_tests/: CMakeLists.txt
unit_tests/build-wbscorer-Desktop_Qt_5_15_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  CTestTestfile.cmake  build.ninja  cmake_install.cmake
unit_tests/build-wbscorer-Desktop_Qt_5_15_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-3a4edcebb25decdbac2a.json  cmakeFiles-v1-f63ccd3213dab13ef77c.json  codemodel-v2-480a20eac19939181eb5.json  index-2021-05-13T12-46-12-0170.json  target-scorer-Debug-ad0a116d8ed15f5ffddb.json  target-scorer_autogen-Debug-a356ed781cd067a0ba83.json  target-scorer_autogen_timestamp_deps-Debug-9d27079fac0247554fcd.json
unit_tests/build-wbscorer-Desktop_Qt_5_15_1_MinGW_64_bit-Debug/scorer_autogen/: deps  moc_predefs.h
unit_tests/build-wbscorer-Desktop_Qt_5_15_1_MinGW_64_bit-Debug/scorer_autogen/include/: tst_scorer.moc
unit_tests/ut_wbscorer/: CMakeLists.txt  testbowlscorer.cpp  testbowlscorer.h
